# VisaoComputacional

./: .gitignore  README.md  pyproject.toml
dataset_banana/: README.dataset.txt  README.roboflow.txt  data.yaml
notebooks/: 11-prof-saulo-inferencia-yolo.ipynb  Inferencia.ipynb  Treinamento.ipynb
notebooks/runs/detect/train/: args.yaml  results.csv
