[project]
name = "visaocomputacional"
version = "0.1.0"
description = ""
authors = [
    {name = "MagaseAiko",email = "aiko40@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "ultralytics (>=8.4.48,<9.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "visaocomputacional", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
